# mlrwsmm

./: CMakeLists.txt  README.md
include/: common.h
include/memory/: memory_manager.h
include/platform/: process.h  shared_memory.h  sync.h
libs/aggregator/: aggregator_l2.c
libs/log/: logger.c
libs/memory/: memory_manager.c
libs/platform/: posix_process.c  posix_shared_memory.c  posix_sync.c  win_process.c  win_shared_memory.c  win_sync.c
libs/reader/: reader.c  reader_l3.c
libs/util/: path.c
libs/writer/: writer.c  writer_l1.c
scripts/: memory_simulator.bat  memory_simulator.sh  run.bat  run.sh  run_multilevel.bat
src/: main.c  main_multilevel.c  memory_simulator.c
